<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.com-->
<resources>
  <string name="app_name">AppOpsX</string>
  <string name="reset_all">Reset to defaults</string>
  <string name="menu_setting">Settings</string>
  <string name="menu_permission_sort">App permissions</string>
  <string name="menu_backup">Export/restore permission</string>
  <string name="menu_show_hide_premission">Display the default permissions</string>
  <string name="menu_show_op_perm">Display permission details</string>
  <string name="menu_show_op_name">Display OpName</string>
  <string name="menu_show_perm_time">Display last use time of permissions</string>
  <string name="menu_open_all">Allow all permissions</string>
  <string name="menu_close_all">Ignore all permissions</string>
  <string name="open_all_perms">Allow all</string>
  <string name="close_all_perms">Ignore all</string>
  <string name="no_perms">The app doesn\'t ask for any permissions</string>
  <string name="about">About</string>
  <string name="version">Version</string>
  <string name="normal">General</string>
  <string name="app_ui">UI</string>
  <string name="experience">Experimental Features</string>
  <string name="others">Other</string>
  <string name="auto_ignore_premission">Automatically turn off permissions</string>
  <string name="auto_ignore_summary">All permissions auto turn off after application installed</string>
  <string name="auto_ignore_permission_title">Close permission template automatically</string>
  <string name="auto_ignore_permission_temp_summary">Only selected permissions will be turned off once auto turn off permission function is on</string>
  <string name="allow_bg_remote">Allow running in the background</string>
  <string name="allow_bg_remote_summary">Allows running in the background can reduce the number of applications granted by the ROOT.</string>
  <string name="show_log">Show Logs</string>
  <string name="log_empty">No logs</string>
  <string name="show_sys_apps">Display system application</string>
  <string name="show_sys_apps_summary">Display system apps in the list</string>
  <string name="use_adb_mode">Use ADB mode</string>
  <string name="use_adb_mode_summary">Using ADB mode without Root permissions, turn on [ADB over network] in the developer options \n or connected to the computer to execute adb tcpip %1$d in terminal</string>
  <string name="use_adb_port">Choose Adb port</string>
  <string name="use_adb_port_summary">Current ADB port: %1$d</string>
  <string name="app_sort_type">Sort by</string>
  <string name="app_sort_type_summary">Current sort order: %1$s</string>
  <string name="app_sort_type_title">Sort By</string>
  <string name="app_daynight_mode">Night mode</string>
  <string name="app_daynight_mode_summary">It will take effect after restart</string>
  <string name="app_language">Language</string>
  <string name="close_bg_server_summary">Turn off background services</string>
  <string name="close_bg_server_title">Click this option to improve the connection when connection failure</string>
  <string name="root_over_adb_mode">Root compatibility mode</string>
  <string name="root_over_adb_mode_summary">Please enable this mode when Root mode failed.</string>
  <string name="disable_toast">Ignored %2$d permissions of [ %1$s ]</string>
  <string name="permission_count">Granted %1$d from %2$d apps </string>
  <string name="acknowledgments_list">Acknowledgments</string>
  <string name="error_msg">%1$s\n\n%2$s</string>
  <string name="permlab_POST_NOTIFICATION">Post notification</string>
  <string name="permlab_PLAY_AUDIO">Play audio</string>
  <string name="permlab_READ_CLIPBOARD">Read clipboard</string>
  <string name="permlab_WRITE_CLIPBOARD">Modify clipboard</string>
  <string name="permlab_TURN_ON_SCREEN">Turn screen on</string>
  <string name="permlab_RUN_IN_BACKGROUND">Run background</string>
  <string name="permlab_MONITOR_LOCATION">Monitor location</string>
  <string name="permlab_MONITOR_HIGH_POWER_LOCATION">Monitor high power location</string>
  <string name="permlab_NEIGHBORING_CELLS">Coarse location</string>
  <string name="permlab_AUDIO_MASTER_VOLUME">Master volume</string>
  <string name="permlab_AUDIO_VOICE_VOLUME">Voice volume</string>
  <string name="permlab_AUDIO_RING_VOLUME">Ring volume</string>
  <string name="permlab_AUDIO_MEDIA_VOLUME">Media volume</string>
  <string name="permlab_AUDIO_ALARM_VOLUME">Alarm volume</string>
  <string name="permlab_AUDIO_NOTIFICATION_VOLUME">Notification volume</string>
  <string name="permlab_AUDIO_BLUETOOTH_VOLUME">Bluetooth volume</string>
  <string name="permlab_TOAST_WINDOW">Display toasts</string>
  <string name="permlab_ACTIVATE_VPN">Activate VPN</string>
  <string name="permlab_TAKE_AUDIO_FOCUS">Audio focus</string>
  <string name="permlab_ACCESS_MOBLIE_NETWORK_DATA">Mobile network</string>
  <string name="permlab_ACCESS_WIFI_NETWORK_DATA">WiFi network</string>
  <string name="default_ignored">4,5,6,7,8,9,13,14,15,16,17,18,19,20,21,22,23,27,43,51,54,57,62,64,66</string>
  <string name="perm_export">Export</string>
  <string name="perm_import">Import</string>
  <string name="perm_restore">Restore</string>
  <string name="dlg_title">Tips</string>
  <string name="backup_success">Backup successfully: %1$s</string>
  <string name="backup_file_lack">Backup file is corrupted</string>
  <string name="backup_count">App number of backup: %1$d</string>
  <string name="backup_file_size">File size: %1$s</string>
  <string name="dlg_delete_msg">Are you sure to delete the backup file?\n %1$s </string>
  <string name="dlg_restore_msg">Are you sure to restore from the backup file?\n %1$s </string>
  <string name="delete">Delete</string>
  <string name="translate">Translations</string>
  <string name="help">Help</string>
  <string name="open_source">Open source licenses</string>
  <string name="acknowledgment">Acknowledgment</string>
  <string name="acknowledgment_description">Appreciate all your great advice and help</string>
  <string name="sort_by_name_first_letter">Sort by name</string>
  <string name="sort_by_name_last_letter">Sort by name (letters rear)</string>
  <string name="sort_by_installed_time">Sort by install time</string>
  <string name="sort_by_last_updated_time">Sort by update time</string>
  <string name="error_no_adb">Connection failed! \N solution: \n1. developers enable ADB ADB debugging or open network option debug \n3. turn on USB debugging connected to the computer, copy the following commands execute in Terminal \nadb shell sh /sdcard/Android/data/com.zzzmode.appopsx/opsx.sh</string>
  <string name="error_no_su">Error!\nPlease check whether the phone has Root, no Root can be modified in the use of ADB mode settings.</string>
  <string name="error_su_timeout">Error, please check if Root permission is granted.</string>
  <string name="error_connect_fail">Error!\nSolution:\nA: Try to open the \"Root compatibility mode\" in the settings.\nB: Use other root permissions manager, e.g SuperSU.\nC:  If you still see the error message, try to disable SElinux(for security reasons, so please choose carefully)</string>
  <string name="shell_start">Use script start server</string>
  <string name="shell_start_description">Started using the command without Root permissions, and set the ADB port</string>
  <string name="copied_hint">Copied to clipboard</string>
  <string name="shell_cmd_help">Turn on USB debugging connected to the computer, copy the following commands execute in Terminal \n%1$s</string>
  <string name="shell_cmd">adb shell sh /sdcard/Android/data/com.zzzmode.appopsx/opsx.sh &amp;</string>
  <string name="never_used">(Never used)</string>
  <string name="menu_app_info">App info</string>
  <string name="with_root_network">Display network connections permissions</string>
  <string name="menu_stats">Usage stats</string>
  <string name="perms_count">%1$s (used %2$d times)</string>
  <string name="lang_auto">Auto</string>
  <string name="bg_closed">Closed</string>
  <string name="other_op_hint">This action modifies the non-standard appops permission, this item restarts will invalid, please note that backup!</string>
  <string name="other_op_stop_show">Don\'t show again</string>

  <string name="show_ignored_app">Display ignored apps</string>
  <string name="action_users">Users</string>
</resources>
