<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_hide_perm"
    app:showAsAction="never"
    android:checkable="true"
    android:title="@string/menu_show_hide_premission"/>
  <item
    android:id="@+id/action_show_op_perm"
    app:showAsAction="never"
    android:checkable="true"
    android:title="@string/menu_show_op_perm"/>
  <item
    android:id="@+id/action_show_op_name"
    app:showAsAction="never"
    android:checkable="true"
    android:title="@string/menu_show_op_name"/>
  <item
    android:id="@+id/action_show_perm_time"
    app:showAsAction="never"
    android:checkable="true"
    android:title="@string/menu_show_perm_time"/>
  <item
    android:id="@+id/action_open_all"
    app:showAsAction="never"
    android:title="@string/menu_open_all"/>
  <item
    android:id="@+id/action_close_all"
    app:showAsAction="never"
    android:title="@string/menu_close_all"/>
  <item
    android:id="@+id/action_app_info"
    app:showAsAction="never"
    android:title="@string/menu_app_info"/>

  <item android:id="@+id/action_reset" app:showAsAction="never" android:title="@string/reset_all"/>
</menu>